“我的首页”，下拉刷新，新增页面
git-svn-id: svn://svn6.apicloud.com/A6032445255190/%E5%9F%BA%E9%87%91%E5%AE%9A%E6%8A%95%E8%BD%AF%E4%BB%B6@2 0e1a2743-8d03-4e5a-a60c-7e26af42b145

--- a/html/main.html
+++ b/html/main.html
@@ -64,6 +64,21 @@
         str += '</ul>';
 
         $api.byId('sys-info').innerHTML = str;
+        api.setRefreshHeaderInfo({
+            visible: true,
+            loadingImg: 'widget://image/refresh.png',
+            bgColor: '#ccc',
+            textColor: '#fff',
+            textDown: '下拉刷新...',
+            textUp: '松开刷新...',
+            showTime: true
+        }, function(ret, err){
+            //查询是否有新数据
+            //有新数据就显示新数据
+            api.refreshHeaderLoadDone();
+
+        });
+
 
     };
 </script>
