注册，登录，登出，localStorage传递数据
git-svn-id: svn://svn6.apicloud.com/A6032445255190/%E5%9F%BA%E9%87%91%E5%AE%9A%E6%8A%95%E8%BD%AF%E4%BB%B6@3 0e1a2743-8d03-4e5a-a60c-7e26af42b145

--- a/html/main.html
+++ b/html/main.html
@@ -29,6 +29,7 @@
 <body>
     <label>Hello APP</label>
     <div id='sys-info'></div>
+    <div id='test' onclick="openMy()">我的首页</div>
 </body>
 <script type="text/javascript" src="../script/api.js"></script>
 <script type="text/javascript">
@@ -81,6 +82,17 @@
 
 
     };
+
+    function openMy() {
+        api.openWin({
+            name: 'my page',
+            url: 'myPageWin.html',
+            pageParam: {
+                name: 'my page'
+            }
+        });
+
+    }
 </script>
 
 </html>
